; ModuleID = '/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_pgp-decrypt.c_parse_old_len.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_pgp-decrypt.c_parse_old_len.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_CHUNK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"parse_old_len: weird length\00", align 1
@PXE_PGP_CORRUPT_DATA = common dso_local global i32 0, align 4
@PKT_NORMAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32)* @parse_old_len to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_old_len(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %8, align 4
  %12 = call i32 @GETBYTE(i32* %10, i32 %11)
  %13 = load i32, i32* %8, align 4
  store i32 %13, i32* %9, align 4
  %14 = load i32, i32* %7, align 4
  %15 = icmp eq i32 %14, 1
  br i1 %15, label %16, label %24

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @GETBYTE(i32* %17, i32 %18)
  %20 = load i32, i32* %9, align 4
  %21 = shl i32 %20, 8
  %22 = load i32, i32* %8, align 4
  %23 = or i32 %21, %22
  store i32 %23, i32* %9, align 4
  br label %50

24:                                               ; preds = %3
  %25 = load i32, i32* %7, align 4
  %26 = icmp eq i32 %25, 2
  br i1 %26, label %27, label %49

27:                                               ; preds = %24
  %28 = load i32*, i32** %5, align 8
  %29 = load i32, i32* %8, align 4
  %30 = call i32 @GETBYTE(i32* %28, i32 %29)
  %31 = load i32, i32* %9, align 4
  %32 = shl i32 %31, 8
  %33 = load i32, i32* %8, align 4
  %34 = or i32 %32, %33
  store i32 %34, i32* %9, align 4
  %35 = load i32*, i32** %5, align 8
  %36 = load i32, i32* %8, align 4
  %37 = call i32 @GETBYTE(i32* %35, i32 %36)
  %38 = load i32, i32* %9, align 4
  %39 = shl i32 %38, 8
  %40 = load i32, i32* %8, align 4
  %41 = or i32 %39, %40
  store i32 %41, i32* %9, align 4
  %42 = load i32*, i32** %5, align 8
  %43 = load i32, i32* %8, align 4
  %44 = call i32 @GETBYTE(i32* %42, i32 %43)
  %45 = load i32, i32* %9, align 4
  %46 = shl i32 %45, 8
  %47 = load i32, i32* %8, align 4
  %48 = or i32 %46, %47
  store i32 %48, i32* %9, align 4
  br label %49

49:                                               ; preds = %27, %24
  br label %50

50:                                               ; preds = %49, %16
  %51 = load i32, i32* %9, align 4
  %52 = icmp slt i32 %51, 0
  br i1 %52, label %57, label %53

53:                                               ; preds = %50
  %54 = load i32, i32* %9, align 4
  %55 = load i32, i32* @MAX_CHUNK, align 4
  %56 = icmp sgt i32 %54, %55
  br i1 %56, label %57, label %60

57:                                               ; preds = %53, %50
  %58 = call i32 @px_debug(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  %59 = load i32, i32* @PXE_PGP_CORRUPT_DATA, align 4
  store i32 %59, i32* %4, align 4
  br label %64

60:                                               ; preds = %53
  %61 = load i32, i32* %9, align 4
  %62 = load i32*, i32** %6, align 8
  store i32 %61, i32* %62, align 4
  %63 = load i32, i32* @PKT_NORMAL, align 4
  store i32 %63, i32* %4, align 4
  br label %64

64:                                               ; preds = %60, %57
  %65 = load i32, i32* %4, align 4
  ret i32 %65
}

declare dso_local i32 @GETBYTE(i32*, i32) #1

declare dso_local i32 @px_debug(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
